--- a/championship/pom.xml
+++ b/championship/pom.xml
@@ -47,6 +47,16 @@
       <artifactId>pdfbox</artifactId>
       <version>2.0.30</version>
     </dependency>
+    <dependency>
+      <groupId>org.xerial</groupId>
+      <artifactId>sqlite-jdbc</artifactId>
+      <version>3.44.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version> <!-- Use a versão mais recente disponível -->
+    </dependency>
   </dependencies>
 
   <build>
